# vpsdaniele

./: .gitignore  README.md  configs.py  pyproject.toml  requirements.txt
app/: __init__.py  extensions.py
app/forms/: __init__.py  loginForm.py  resetUserForm.py  signUpForm.py
app/models/: user.py
app/routes/: __init__.py  auth_bp.py  main_bp.py  users.py
app/templates/: base.html
app/templates/auth/: index.html  login.html  profile.html  signup.html
migrations/versions/: 4e0d51189676_initial_migration.py
